syntax = "proto3";

import "google/api/annotations.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

package ocp.user.api;

option go_package = "gihtub.com/ozoncp/ocp-user-api/pkg/ocp-user-api;ocp_user_api";

service OcpUserApi {

    rpc ListUsersV1(ListUsersV1Request) returns (ListUsersV1Response) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }

    rpc DescribeUserV1(DescribeUserV1Request) returns (DescribeUserV1Response) {
        option (google.api.http) = {
            get: "/v1/users/{userId}"
        };
    }

    rpc CreateUserV1(CreateUserV1Request) returns (CreateUserV1Response) {
        option (google.api.http) = {
            post: "/v1/users"
        };
    }

    rpc RemoveUserV1(RemoveUserV1Request) returns (RemoveUserV1Response) {
        option (google.api.http) = {
            delete: "/v1/users/{userId}"
        };
    }

    rpc MultiCreateUserV1(MultiCreateUserV1Request) returns (MultiCreateUserV1Response) {
        option (google.api.http) = {
            post: "/v1/users"
        };
    }

    rpc UpdateUserV1(UpdateUserV1Request) returns (UpdateUserV1Response) {
        option (google.api.http) = {
            post: "/v1/users/{userId}"
        };
    }
}

message ListUsersV1Request {
    uint64 limit = 1;
    uint64 offset = 2;
}

message ListUsersV1Response {
    repeated User users = 1;
    uint64 nextOffset = 2;
}

message CreateUserV1Request {
    uint64 calendarId = 2;
    uint64 resumeId = 3;
    UserProfile profile = 4 [(validate.rules).message.required = true];
}

message CreateUserV1Response {
    uint64 userId = 1;
}

message RemoveUserV1Request {
	uint64 userId = 1 [(validate.rules).uint64.gt = 0];
}

message RemoveUserV1Response {
    bool deleted = 1;
}

message DescribeUserV1Request {
	uint64 userId = 1 [(validate.rules).uint64.gt = 0];
}

message DescribeUserV1Response {
    User user = 1;
}

message MultiCreateUserV1Request {
  repeated UserParams users = 1;
}

message MultiCreateUserV1Response {
    int64 count = 1;
}

message UpdateUserV1Request {
    uint64 userId = 1 [(validate.rules).uint64.gt = 0];
    UserParams userParams = 2 [(validate.rules).message.required = true];
}

message UpdateUserV1Response {
    bool updated = 1;
}

message UserParams {
    uint64 calendarId = 2;
    uint64 resumeId = 3;
    UserProfile profile = 4 [(validate.rules).message.required = true];
}

message UserProfile {
    string name = 1;
    string surname = 2;
    string patronymic = 3;
    string email = 4;
}

message User {
    uint64 id = 1 [(validate.rules).uint64.gt = 0];
    uint64 calendarId = 2;
    uint64 resumeId = 3;
    UserProfile profile = 4;
}
